--- a/style/about.css
+++ b/style/about.css
@@ -1,56 +1,113 @@
 body {
-  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  background-color: aliceblue;
-  height: 100vh;
+  background-color: white;
   overflow: hidden;
   cursor: none;
 }
 
 h1 {
-  color: mediumseagreen;
-  font-size: 1rem;
-  font-family: "arial";
+  color: #333333;
+  font-size: 1.2rem;
+  font-family: "Helvetica";
   z-index:99;
-  line-height: 1.3rem;
+  line-height: 1.4rem;
 }
-
-#header{
-  text-align: left;
-  margin-top: 2vh;
-  margin-left: 5vh;
-}
-
 
 a{
-  color: mediumseagreen;
-  font-family: 'IBM Plex Mono', monospace;
-  font-size: 1rem;
+  color: #333333;
+  font-size: 1.2rem;
+  font-family: "Helvetica";
   cursor: none;
   text-decoration: none;
 }
 
-a:hover{
-  text-decoration: underline;
+
+
+
+#body-copy{
+  color: #333333;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  font-family: "Helvetica";
+  width: 60vw;
+  margin-left: 20px;
+  margin-top: -30px;
 }
 
-p{
-  color: mediumseagreen;
-  font-family: 'IBM Plex Mono', monospace;
-  font-size: 1rem;
-  line-height: 1.42rem;
+
+#info:hover{
+  border-radius: 0px;
 }
 
-#text{
-  width: 45vw;
-  margin-left: 50vw;
-  margin-top: -3vh;
+
+#info{
+  position: fixed;
+  right: 15px;
+  background-color: white;
+  border: solid 1px #333333;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top:10px;
+  text-align: right;
+  position: absolute;
+  border-radius: 20px;
 }
 
+#info:hover{
+  border-radius: 0px;
+  transition: 0.25s;
+}
+
+#specimen{
+  position: fixed;
+  right: 153px;
+  background-color: white;
+  border: solid 1px #333333;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top:10px;
+  text-align: right;
+  position: absolute;
+  border-radius: 20px;
+}
+
+#specimen:hover{
+  border-radius: 0px;
+  transition: 0.25s;
+}
+
+#title{
+  position: fixed;
+  left: 15px;
+  background-color: white;
+  border: solid 1px black;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top:10px;
+  border-radius: 20px;
+}
+
+#title:hover{
+  border-radius: 0px;
+  transition: 0.25s;
+}
+
+#copy-container{
+  position: absolute;
+  top:0;
+  left: 0;
+  margin-top: 100px;
+}
 
 /* CLASSES FOR LETTER MODULES */
 
 .trapezoid-top{
-  border-top: 200px solid mediumseagreen;
+  border-top: 200px solid #ffd62c;
   border-left: 100px solid transparent;
   border-right: 100px solid transparent;
   height: 0;
@@ -59,7 +116,7 @@ p{
 }
 .trapezoid-bottom{
   position: absolute;
-  border-bottom: 200px solid mediumseagreen;
+  border-bottom: 200px solid #14ad2d;
   border-left: 100px solid transparent;
   border-right: 100px solid transparent;
   height: 0;
@@ -72,7 +129,7 @@ p{
   pointer-events: none;
   width: 20px;
   height:20px;
-  background-color: tomato;
+  background-color: #ff1038;
   border-radius: 100%;
   position: absolute;
   top:0;
@@ -90,16 +147,14 @@ p{
   height: 100vh;
 }
 
-
-
-
 .a-rectangle-bottom-right{
   position: absolute;
   width: 500px;
   height: 250px;
-  background-color:mediumseagreen;
+  background-color:#ffcad5;
   padding: 5px;
   z-index: -1;
+  transform: scale(1.3);
 }
 
 .a-circle-bottom-left{
@@ -109,7 +164,9 @@ p{
   width: 350px;
   height: 350px;
   border-radius: 100%;
-  background-color:mediumseagreen;
+  background-color:#ffd62c;
+  transform: scale(1.3);
+
 }
 
 
@@ -117,15 +174,21 @@ p{
 .a-trapezoid-bottom-left{
   top: 300px;
   left: -47px;
+  transform: scale(1.3);
+
 }
 
 .a-trapezoid-bottom-right{
   top: 300px;
   left: 154px;
+  transform: scale(1.3);
+
 }
 
 .a-trapezoid-top{
   top: 21px;
   left: 53px;
+  transform: scale(1.3);
+
 }
 
