--- a/style/about.css
+++ b/style/about.css
@@ -25,10 +25,10 @@ a{
 
 #body-copy{
   color: #333333;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
   font-family: "Helvetica";
-  width: 60vw;
+  width: 40vw;
   margin-left: 20px;
   margin-top: -30px;
 }
@@ -51,12 +51,15 @@ a{
   margin-top:10px;
   text-align: right;
   position: absolute;
+  z-index: 10000000;
   border-radius: 20px;
 }
 
 #info:hover{
   border-radius: 0px;
   transition: 0.25s;
+  z-index: 10000000;
+
 }
 
 #specimen{
@@ -72,11 +75,15 @@ a{
   text-align: right;
   position: absolute;
   border-radius: 20px;
+  z-index: 10000000;
+
 }
 
 #specimen:hover{
   border-radius: 0px;
   transition: 0.25s;
+  z-index: 10000000;
+
 }
 
 #title{
@@ -90,35 +97,42 @@ a{
   padding-bottom: 5px;
   margin-top:10px;
   border-radius: 20px;
+  z-index: 10000000;
+
 }
 
 #title:hover{
   border-radius: 0px;
   transition: 0.25s;
+  z-index: 10000000;
 }
 
 #copy-container{
   position: absolute;
   top:0;
   left: 0;
-  margin-top: 90px;
+  margin-top: 100px;
+}
+
+#copy-container:hover{
+  z-index: 10000000000;
 }
 
 /* CLASSES FOR LETTER MODULES */
 
 .trapezoid-top{
-  border-top: 200px solid #ffd62c;
-  border-left: 100px solid transparent;
-  border-right: 100px solid transparent;
+  border-top: 35vh solid #14ad2d;
+  border-left: 25vh solid transparent;
+  border-right: 25vh solid transparent;
   height: 0;
   width: 200px;
   position: absolute;
 }
 .trapezoid-bottom{
   position: absolute;
-  border-bottom: 200px solid #14ad2d;
-  border-left: 100px solid transparent;
-  border-right: 100px solid transparent;
+  border-bottom: 30vh solid #ffd62c;
+  border-left: 17vh solid transparent;
+  border-right: 17vh solid transparent;
   height: 0;
   width: 200px;
 }
@@ -149,46 +163,19 @@ a{
 
 .a-rectangle-bottom-right{
   position: absolute;
-  width: 500px;
-  height: 250px;
+  width: 70vh;
+  height: 36vh;
   background-color:#ffcad5;
   padding: 5px;
   z-index: -1;
-  transform: scale(4*30vw);
 }
 
 .a-circle-bottom-left{
   position: absolute;
   top: 272px;
   left: -34px;
-  width: 350px;
-  height: 350px;
+  width: 50vh;
+  height: 50vh;
   border-radius: 100%;
   background-color:#ffd62c;
-  transform: scale(4*30vw);
-
 }
-
-
-
-.a-trapezoid-bottom-left{
-  top: 300px;
-  left: -47px;
-  transform: scale(4*30vw);
-
-}
-
-.a-trapezoid-bottom-right{
-  top: 300px;
-  left: 154px;
-  transform: scale(4*30vw);
-
-}
-
-.a-trapezoid-top{
-  top: 21px;
-  left: 53px;
-  transform: scale(4*30vw);
-
-}
-
