--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ a{
 
 
 #info{
-  position: absolute;
+  position: fixed;
   right: 15px;
   background-color: white;
   border: solid 1px #333333;
@@ -34,7 +34,7 @@ a{
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top:10px;
+  margin-top:12px;
   text-align: right;
   position: absolute;
   border-radius: 20px;
@@ -46,7 +46,7 @@ a{
 }
 
 #specimen{
-  position: absolute;
+  position: fixed;
   right: 153px;
   background-color: white;
   border: solid 1px #333333;
@@ -54,7 +54,7 @@ a{
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top:10px;
+  margin-top:12px;
   text-align: right;
   position: absolute;
   border-radius: 20px;
@@ -78,7 +78,7 @@ p{
 }
 
 #header{
-  position: absolute;
+  position: fixed;
   left: -45px;
   background-color: white;
   border: solid 1px black;
@@ -86,7 +86,7 @@ p{
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top:10px;
+  margin-top:12px;
   border-radius: 20px;
 }
 
