--- a/style/about.css
+++ b/style/about.css
@@ -23,7 +23,7 @@ a{
 #header{
   width: 100vw;
   height: auto;
-  position: absolute;
+  position: fixed;
   top: 10px;
 }
 
@@ -34,7 +34,7 @@ a{
   line-height: 1.9rem;
   font-family: "Helvetica";
   width: 40vw;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 80px;
 }
 
@@ -49,7 +49,7 @@ p:hover{
 
 #info{
   position: fixed;
-  right: 15px;
+  right: 22px;
   background-color: white;
   border: solid 1px #333333;
   padding-left: 15px;
@@ -57,7 +57,6 @@ p:hover{
   padding-top: 5px;
   padding-bottom: 5px;
   margin-top:10px;
-  text-align: right;
   position: absolute;
   z-index: 10000000;
   border-radius: 20px;
@@ -72,7 +71,7 @@ p:hover{
 
 #specimen{
   position: fixed;
-  right: 153px;
+  right: 160px;
   background-color: white;
   border: solid 1px #333333;
   padding-left: 15px;
@@ -113,17 +112,6 @@ p:hover{
   border-radius: 0px;
   transition: 0.25s;
   z-index: 10000000;
-}
-
-#copy-container{
-  position: absolute;
-  top:0;
-  left: 0;
-  margin-top: 100px;
-}
-
-#copy-container:hover{
-  z-index: 10000000000;
 }
 
 /* CLASSES FOR LETTER MODULES */
